# jsSip-demo

./: .gitignore  GNUmakefile  https.py  index.html  ptt-to-sip-flow.mermaid  ptt-twilio.html  ptt.html  pyproject.toml  requirements-tests.txt  requirements.txt  styles.css  twilio-twiml-server.py  vue-ptt.html
jsSip_demo/: __init__.py  twilio_twiml_server.py  version.py
lib/: jquery-3.7.1.js  jssip.js
